@@ -1,3 +1,9 @@
+2003-09-25  Pascal Scheffers  <pascal@scheffers.net>
+	
+	* tkchat.tcl: Added loading of $HOME/.tkchatrc.tcl (if it exists)
+	to allow users change GUI settings add proc, etc. (David Zolli aka
+	kroc wants to do this for XFce) 
+	
 2003-09-24  Pascal Scheffers  <pascal@scheffers.net>
 	
 	* tkchat.tcl: Added functions and regular expressions to list the
